<resources>
    <string name="app_name">My Application</string>
    <string name="jmeno">Jméno</string>
    <string name="prezdivka">Přezdívka</string>
    <string name="heslo">Heslo</string>
    <string name="vek">Věk</string>
    <string name="vyska">Výška</string>
    <string name="vaha">Váha</string>
    <string name="registrace">Zaregistrujte se</string>
    <string name="prihlaseni">Přihlašte se</string>
    <string name="kalkulacka">Kalkulačka</string>
    <string name="zavody">Závody</string>
    <string name="vzdalenost">Vzdálenost</string>
    <string name="split">Spočítej vzdálenost na 500 metrů</string>
    <string name="etVzdalenost">Vzdálenost</string>
    <string name="bSpocitejVzdalnost">Spočítej vzdálenost</string>
    <string name="tvVzdalenost">Vzdálenost</string>
    <string name="ss">SS</string>
    <string name="mm">MM</string>
    <string name="metry">metry</string>
    <string name="dvojtecka">:</string>
    <string name="cas">Čas</string>
    <string name="bSpocitejCas">Spočítej čas</string>

</resources>
