<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dohny.myapplication.RegisterActivity">


    <EditText
        android:id="@+id/jmeno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/jmeno"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/heslo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/jmeno"
        android:ems="10"
        android:hint="@string/heslo"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/prihlaseni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heslo"
        android:layout_centerHorizontal="true"
        android:text="@string/prihlaseni" />

    <Button
        android:id="@+id/registrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrace"
        android:layout_below="@+id/prihlaseni"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
