<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dohny.myapplication.CalculatorActivity"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/tvVzdalenost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/tvVzdalenost"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                    android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/etVzdalenost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/tvVzdalenost"
            android:layout_marginTop="36dp"
            android:hint="Metry"
            android:textAlignment="center" />

        <Button
                android:id="@+id/bSpocitejVzdalenost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etVzdalenost"
                android:text="@string/bSpocitejVzdalnost"/>

        <TextView
            android:id="@+id/tvSplit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/bSpocitejVzdalenost"
            android:layout_marginTop="20dp"
            android:text="@string/split"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/splitMM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSplit"
            android:hint="MM"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/times"/>
        <EditText
            android:id="@+id/splitSS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSplit"
            android:hint="SS"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/splitMM" />
        <Spinner
            android:id="@id/times"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/splitSS"
            android:layout_alignParentRight="true" />


</RelativeLayout>
